--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
     <title>Martian Robots | Byron Buckley</title>
   </head>
   <body>
+    <div class="top-bar">
+      <div class="top-bar-left">
+        <h1>Martian Robots</h1>
+      </div>
+    </div>
+    <br>
     <div id="root"></div>
     <!--
       This HTML file is a template.
