style nav: header + footer

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,22 @@
   </head>
   <body>
     <div class="top-bar">
-      <div class="top-bar-left">
-        <h1>Martian Robots</h1>
+      <div class="row">
+        <div class="top-bar-left">
+          <div class="top-bar-title">
+            <h1>Martian Robots</h1>
+          </div>
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu">
+            <li><a href="#instruct">Instruct</a></li>
+            <li><a href="#filter">Filter</a></li>
+            <li><a href="#grid">Grid</a></li>
+          </ul>
+        </div>
       </div>
     </div>
+
     <br>
     <div id="root"></div>
     <!--
@@ -33,5 +45,15 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <div class="top-bar">
+      <div class="row">
+        <ul class="menu">
+          <li><a href="#instruct">Instruct</a></li>
+          <li><a href="#filter">Filter</a></li>
+          <li><a href="#grid">Grid</a></li>
+        </ul>
+      </div>
+    </div>
+
   </body>
 </html>
