--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             <h1>Martian Robots</h1>
           </div>
         </div>
-        <div class="top-bar-right">
+        <div class="top-bar-right  show-for-small-only">
           <ul class="menu">
             <li><a href="#instruct">Instruct</a></li>
             <li><a href="#filter">Filter</a></li>
