update nav links

--- a/public/index.html
+++ b/public/index.html
@@ -18,16 +18,25 @@
   <body>
     <div class="top-bar">
       <div class="row">
-        <div class="top-bar-left">
-          <div class="top-bar-title">
-            <h1>Martian Robots</h1>
+        <div class="columns medium-6">
+          <div class="top-bar-left">
+            <div class="top-bar-title">
+              <h1>Martian Robots</h1>
+            </div>
           </div>
         </div>
-        <div class="top-bar-right  show-for-small-only">
+        <div class="columns medium-6">
+          <ul class="menu top-bar-right">
+            <li><a class='show-for-medium' href="https://github.com/komplexb/martian-robots-web" target='_blank'>GitHub</a></li>
+          </ul>
+        </div>
+
+        <div class="top-bar-right show-for-small-only">
           <ul class="menu">
             <li><a href="#instruct">Instruct</a></li>
             <li><a href="#filter">Filter</a></li>
             <li><a href="#grid">Grid</a></li>
+            <li><a href="https://github.com/komplexb/martian-robots-web" target='_blank'>GitHub</a></li>
           </ul>
         </div>
       </div>
